# Pixiv_track_downloader

./: README.md  pyproject.toml
src/pixiv_track_downloader/: __init__.py
src/pixiv_track_downloader_cli/: main.py
src/pixiv_track_downloader_desktop/: main.py
src/pixiv_track_downloader_desktop/ui/: link_dialog.ui  main_window.py  main_window.ui
