[project]
name = "pixiv-track-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AutoPotato", email = "a0905361233@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pixiv-track-downloader = "pixiv_track_downloader_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
